--- a/SWQuotation/Web.config
+++ b/SWQuotation/Web.config
@@ -14,27 +14,18 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-
-	
-
-	<connectionStrings>
-		<add name="SWQ" connectionString="data source=192.168.222.5\swdblive; database=testdb; uid=sa;pwd=Infor@2019; Integrated Security=false; Connection Timeout=7200" providerName="System.Data.SqlClient" />
-	</connectionStrings>
-	
-	
-	<system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
+  <system.web.extensions>
+		<scripting>
+			<webServices>
+				<jsonSerialization maxJsonLength="2147483644" />
+			</webServices>
+		</scripting>
+	</system.web.extensions>
+  <system.web>
+      <compilation debug="true" targetFramework="4.6.1" />
+      <httpRuntime targetFramework="4.6.1" />
 	  <sessionState timeout="60" mode="InProc" />
   </system.web>
-  <system.webServer>
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -73,10 +64,28 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  
+	
+	
+  <system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer>
+  
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+
+	  <add name="SWQ" connectionString="data source=192.168.222.5\swdblive; database=testdb; uid=sa;pwd=Infor@2019; Integrated Security=false; Connection Timeout=7200" providerName="System.Data.SqlClient" />
+
+  </connectionStrings>
 </configuration>
