--- a/SWQuotation/Web.config
+++ b/SWQuotation/Web.config
@@ -22,6 +22,7 @@
 		</scripting>
 	</system.web.extensions>
   <system.web>
+	  <customErrors mode="Off"/>
       <compilation debug="true" targetFramework="4.6.1" />
       <httpRuntime targetFramework="4.6.1" />
 	  <sessionState timeout="60" mode="InProc" />
